Bug 379127 - K3B does not show the splashscreen correctly
Summary: K3B does not show the splashscreen correctly
Status: RESOLVED FIXED
Alias: None
Product: k3b
Classification: Applications
Component: GUI/Usability (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: K3b Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-04-23 16:48 UTC by Patrick Silva
Modified: 2017-05-08 07:02 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screencast (947.44 KB, video/mp4)
2017-04-23 16:48 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2017-04-23 16:48:11 UTC
Created attachment 105161 [details]
screencast

I'm running K3B 17.04 on Arch.
The splashscreen appears quickly, disappears and reappears with some transparency.
Watch the screencast please.
Comment 1 Leslie Zhai 2017-04-25 02:14:05 UTC
Hi Dr. Chapatin,

Thanks for your report!

It is difficult to reproduce the issue to me, but I will check the source code directly!

Regards,
Leslie Zhai
Comment 2 Leslie Zhai 2017-05-08 07:02:28 UTC
Git commit 364871bc06da58e14aaad65cf57fb5c1db7d263a by Leslie Zhai.
Committed on 08/05/2017 at 07:00.
Pushed by lesliezhai into branch 'master'.

Fix does not correctly show the K3b::Splash issue.

M  +3    -1    src/k3bapplication.cpp
M  +5    -31   src/k3bsplash.cpp
M  +1    -0    src/k3bsplash.h

https://commits.kde.org/k3b/364871bc06da58e14aaad65cf57fb5c1db7d263a