Fix does not correctly show the K3b::Splash issue.

BUG: 379127